Fix default avatar alignment

--- a/res/css/views/rooms/_ReplyTile.scss
+++ b/res/css/views/rooms/_ReplyTile.scss
@@ -120,5 +120,9 @@ limitations under the License.
             white-space: nowrap;
             text-overflow: ellipsis;
         }
+
+        .mx_BaseAvatar {
+            line-height: 14px; // To match size
+        }
     }
 }
